<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/layout_padding_small">

    <android.support.v7.widget.CardView
        android:id="@+id/trip_planner_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:clickable="true"
        app:cardCornerRadius="@dimen/card_view_corner_radius">

        <LinearLayout
            android:id="@+id/trip_planner_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal"
            android:padding="@dimen/layout_padding_small">

            <ImageView
                android:layout_width="@dimen/image_view_width"
                android:layout_height="@dimen/image_view_height"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/layout_margin_small"
                android:layout_marginRight="@dimen/layout_margin_small"
                android:src="@drawable/ic_search_black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/white_rounded_background_borderless"
                android:hint="@string/trip_planner_text_view_hint"
                android:textColor="@color/standard_text_color"
                android:textSize="@dimen/text_size_big"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/trip_planner_card_view"
        android:layout_marginTop="@dimen/layout_margin"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/more_options_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_margin_small"
            android:orientation="vertical"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/bus_stops_linear_layout"
                        android:layout_width="100dp"
                        android:layout_height="85dp"
                        android:layout_margin="@dimen/layout_margin_small"
                        android:background="@drawable/green_rounded_background_borderless"
                        android:clickable="true"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/layout_padding_small">

                        <ImageView
                            android:layout_width="@dimen/image_view_width"
                            android:layout_height="@dimen/image_view_height"
                            android:background="@drawable/white_circle_background_borderless"
                            android:src="@drawable/ic_location_on_black"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/layout_margin_small"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:maxLines="2"
                            android:minLines="2"
                            android:text="@string/bus_stops_title"
                            android:textAllCaps="true"
                            android:textColor="@color/white_text_color"
                            android:textStyle="bold"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/buses_linear_layout"
                        android:layout_width="100dp"
                        android:layout_height="85dp"
                        android:layout_margin="@dimen/layout_margin_small"
                        android:background="@drawable/orange_rounded_background_borderless"
                        android:clickable="true"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/layout_padding_small">

                        <ImageView
                            android:layout_width="@dimen/image_view_width"
                            android:layout_height="@dimen/image_view_height"
                            android:background="@drawable/white_circle_background_borderless"
                            android:src="@drawable/ic_directions_bus_black"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/layout_margin_small"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:maxLines="2"
                            android:minLines="2"
                            android:text="@string/buses_title"
                            android:textAllCaps="true"
                            android:textColor="@color/white_text_color"
                            android:textStyle="bold"/>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/favourites_card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/layout_padding_small">

                <TextView
                    android:id="@+id/favourites_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:gravity="center"
                    android:text="@string/favourites_title"
                    android:textAllCaps="true"
                    android:textColor="@color/standard_text_color"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold"/>

                <ListView
                    android:id="@+id/favourites_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/favourites_text_view"
                    android:layout_marginTop="@dimen/layout_margin_small"
                    android:divider="#FFFFFF"
                    android:dividerHeight="@dimen/layout_margin_small"
                    android:paddingBottom="@dimen/layout_padding_small"
                    android:paddingLeft="@dimen/layout_padding_small"
                    android:paddingRight="@dimen/layout_padding_small"
                    android:scrollbars="none"
                    android:visibility="gone"/>

                <LinearLayout
                    android:id="@+id/no_favorites_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/layout_margin_small"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/image_view_width"
                        android:layout_height="@dimen/image_view_height"
                        android:src="@drawable/ic_favorite_border_black"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/layout_margin_small"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="2"
                        android:text="@string/no_favorites_text"
                        android:textAllCaps="true"
                        android:textColor="@color/sub_text_color"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold"/>

                </LinearLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <!--<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/trip_planner_card_view"
        android:overScrollMode="never"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



        </RelativeLayout>

    </ScrollView>-->

</RelativeLayout>